k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /vote
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 80
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: result-service
              port:
                number: 80
        - path: /static
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 80
